tests/pass/test-func8.mc
void foo(int a)
{
  printf("%d\n", a + 3);
}

int main()
{
  foo(40);
  return 0;
}
