tests/fail/fail-expr1.mc
int a;
bool b;

void foo(int c, bool d)    
{
  int dd;
  bool e;
  a + c;
  c - a;
  a * 3;
  c / 2;
  d + a; /* Error: bool + int */
}

int main()
{
  return 0;
}
